/*
 * $Id: Changelog,v 1.46 2003/11/08 00:50:34 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-15 18:10 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * makefile.bc
    ! Fixes from Gianluca Piemonte

2003-11-08 01:41 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/xwtcmd.ch
    ! fixed a mispelling

  * include/xwt.ch
  * src/xwt_api.c
  * src/xwt_gtk/xwt_gtk.c
  * src/xwt_gtk/xwt_gtk.h
  + src/bcolumn.prg
  + src/browse.prg
  + src/xwt_gtk_browse.c
    + Added the HBR TBrowse like widget. It is basically a table whose cells
      can be rendered using codeblocks and also executable arrays. Both
      visualization and update can be managed with a powerfull yet simple
      callback system.
      There still a little more to do (like i.e. live setting change
      management), but the system is already useable. With a minimal effort,
      it could be applied to a DBEDIT.
      Have a look, it is worth.

  * src/xwt_gtk/xwt_gtk_treelist.c

  * test/Makefile
  + test/t_browse
    + added a test for xwtbrowse. Makefiles have been changed so that it
      works as xharbour/tests makefile; use the name of the program
      you want to compile as a target, i.e. 'make t_browse';


2003-10-15 01:10 UTC+0200 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * contrib/xwt/makefile.bc
  * contrib/xwt/src/xwt_win/xwt_win.c
  * contrib/xwt/src/xwt_win/xwt_win.h
  * contrib/xwt/src/xwt_win/xwt_win_framewnd.c
  + contrib/xwt/src/xwt_win/xwt_win_menu.c
  + contrib/xwt/src/xwt_win/xwt_win_menuitem.c
    ! added (basic) menu support for XWT-WIN

  * contrib/xwt/test/wndtest.prg
    + Added menu test

2003-10-13 14:10 UTC+0200 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * src/msgbox.prg
    ! added support for parent and caption (optional parameters).
